--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,7 +1,159 @@
-$font-stack:    Helvetica, sans-serif;
-$primary-color: #333;
+$font-stack:    Roboto, Helvetica, sans-serif;
+$primary-color: rgb(38, 38, 38);
+$max-width: 1400px;
+$max-width-medium: calc(100% - 100px);
+$max-width-small: calc(100% - 40px);
+$green: #56BFA1;
+@import 'flex';
+
+%responsiveContainer {
+  width: 100%;
+  max-width: $max-width;
+  margin: 0 auto;
+  @media screen and (max-width: 1400px) {
+    max-width: $max-width-medium;
+  }
+  @media screen and (max-width: 1000px) {
+    max-width: $max-width-small;
+  }
+}
 
 body {
   font: 100% $font-stack;
   color: $primary-color;
+  margin: 0;
+  background: url('/images/net.png');
+  background-size: 800px;
+  background-repeat: repeat;
+}
+nav{
+  @include flex(center);
+  width: 100%;
+  height: 100px;
+  margin: 0 auto;
+  background: transparent;
+  position: absolute;
+  top: 50px;
+  left:  0;
+  z-index: 10;
+  transition: background-color .2s;
+  .navContainer{
+    @include flex(space-between);
+    @extend %responsiveContainer;
+    flex-wrap: wrap;
+    color: white;
+  }
+  button{
+    padding: 5px 20px 5px 20px;
+    background: transparent;
+    color: $green;
+    border: 2px solid $green;
+    font-size: 14px;
+    text-shadow: none;
+  }
+}
+h1{
+  font-size: 42px;
+  line-height: 63px;
+  @media screen and (max-width: 1000px) {
+    font-size: 32px;
+    line-height: 48px;
+  }
+}
+button{
+  background-color: $green;
+  color: white;
+  font-size: 16px;
+  outline: none;
+  border-radius: 50px;
+  padding: 12px 35px 12px 35px;
+  border:none;
+  text-shadow: 0 2px 4px rgba(0,0,0,0.14);
+  &:hover{
+    cursor: pointer;
+    opacity: .9;
+  }
+}
+a{
+  color: white;
+  text-decoration: none;
+}
+.inlineBetween{
+  @include flex(space-between);
+}
+.mainImage{
+  background: url('/images/hero3.jpeg');
+  width: 100%;
+  height: 800px;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  position: relative;
+  z-index: 0;
+  h1{
+    text-shadow: 0 2px 4px rgba(0,0,0,0.34);
+  }
+  &:before{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background:rgba(0, 0, 0, 0.6);
+    content: ' ';
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+}
+.container{
+  @extend %responsiveContainer;
+  padding:0;
+  overflow: hidden;
+  z-index: 1;
+}
+.col{
+  @include flexCol(flex-start);
+}
+.whiteContainer{
+  z-index: 5;
+  min-height: 300px;
+  background-color: white;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.whiteContainerTop{
+  width: 100%;
+  height: 225px;
+  @include flex(space-between);
+  @media screen and (max-width: 900px) {
+    height: auto;
+    @include flexCol(flex-start);
+  }
+}
+.whiteTopItem{
+  width: calc(100% / 3);
+  height: 80%;
+  border-right: 2px solid rgba(0, 0, 0, 0.1);
+  &:last-child{
+    border-right: none;
+  }
+  div{
+    text-align: center;
+    width: 100%;
+    h2{
+      color: #3E4145;
+      font-size: 28px;
+    }
+    p{
+      max-width: 220px;
+      margin: 0 auto;
+      color: #676B70;
+      line-height: 24px;
+    }
+  }
+}
+
+.whiteContainer2{
+  background:#F1F2F4;
+  width: 100%;
+  min-height: 300px;
 }
